fixed scroll and border collapse

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,14 +11,13 @@ h1 {
 }
 
 .you {
-  border: 2px solid black;
-  border-collapse: collapse;
+  border-bottom: 2px solid black;
   padding: 0.5rem;
 }
 
 .others {
   padding: 0.5rem;
-  border: 2px solid black;
+  border-bottom: 2px solid black;
   border-collapse: collapse;
   text-align: right;
 }
